deploy: 48de256a7d2f8b7a7531ffcecc5f61561b6965e6

--- a/geometry/convexmincowski.html
+++ b/geometry/convexmincowski.html
@@ -149,9 +149,7 @@
                     <main>
                         <h1 id="mincowski-sum-of-convex-polygons"><a class="header" href="#mincowski-sum-of-convex-polygons">Mincowski Sum of Convex Polygons</a></h1>
 <h2 id="code"><a class="header" href="#code">Code</a></h2>
-<pre><pre class="playground"><code class="language-rust noplaygroud"><span class="boring">#![allow(unused)]
-</span><span class="boring">fn main() {
-</span>/// Returns the Minkowski sum of two convex polygons `p` and `q`.
+<pre><code class="language-rust noplayground">/// Returns the Minkowski sum of two convex polygons `p` and `q`.
 /// Both `p` and `q` must be oriented in CCW and should not contain two equal points.
 /// The returned polygon is also oriented in CCW.
 fn minkowski_convex(p: &amp;[P], q: &amp;[P]) -&gt; Vec&lt;P&gt; {
@@ -184,8 +182,7 @@ fn minkowski_convex(p: &amp;[P], q: &amp;[P]) -&gt; Vec&lt;P&gt; {
 		}
 	}
 	ret
-}
-<span class="boring">}</span></code></pre></pre>
+}</code></pre>
 <hr />
 <p>Last modified on 231225.</p>
 
